--- a/requirements-ci.txt
+++ b/requirements-ci.txt
@@ -47,6 +47,7 @@ dicttoxml==1.7.16
 dill==0.3.8
 docker==7.1.0
 docutils==0.20.1  # pyup: ignore (sphinx-rtd-theme 2.0.0 requires docutils<0.21)
+evalidate==2.0.3
 extras==1.0.0
 fixtures==4.1.0
 funcsigs==1.0.2
