--- a/requirements-ci.txt
+++ b/requirements-ci.txt
@@ -77,6 +77,7 @@ mccabe==0.7.0
 more-itertools==10.3.0
 moto==5.0.11
 olefile==0.47
+mypy-extensions==1.0.0
 packaging==24.1
 parameterized==0.9.0
 pathlib2==2.3.7.post1
@@ -133,4 +134,6 @@ Werkzeug==3.0.3
 wrapt==1.16.0
 xmltodict==0.13.0
 zipp==3.19.2
+zope.event==5.0
 zope.interface==6.4.post2
+zope.schema==7.0.1
