--- a/requirements-ci.txt
+++ b/requirements-ci.txt
@@ -39,7 +39,8 @@ evalidate==2.0.3
 greenlet==3.0.3
 hyperlink==21.0.0
 idna==3.7
-incremental==22.10.0
+incremental==24.7.2
+incremental==22.10.0;  python_version < "3.8" # pyup: ignore
 Jinja2==3.1.4
 jmespath==1.0.1
 lz4==4.3.3
